--- a/Ramp Up Assignment 1/index.html
+++ b/Ramp Up Assignment 1/index.html
@@ -2,6 +2,10 @@
 	<html>
 	<head>
 		<title>First Ramp Up Assignment</title>
+		<style type="text/css">
+body{font font-family: arial; background-color: (180, 170, 170)}
+hi{color: (250, 250, 250)}
+		</style>
 	</head>
 	<body>
 		<H1>On the Mount Washington Cog Railway</H1>
