Brew site push 2

--- a/sideproject/contact.html
+++ b/sideproject/contact.html
@@ -41,7 +41,7 @@
 	<div id="footer">
 	<footer>	
 		<p>
-		123 Brewery Way, Beertown - 617-867-5309
+		123 Brewery Way, Beertown - (617) 867-5309
 		<br>
 		&copy 2014 Nick Anderson
 		</p>
