--- a/sideproject/index.html
+++ b/sideproject/index.html
@@ -29,7 +29,7 @@
 		<article>	
 			<h1>Welcome to the Website for Code Brewers</h1>
 			<p>
-			Since October 2014 Code Brewers brewery has been hand crafting robust, high quality beers. Explore our brewing process and ingredients and see what makes us unique. Cheers.
+			Since October 2014 Code Brewers brewery has been hand crafting robust, high quality beers. Explore our brewing process and ingredients to see what makes us unique. Cheers.
 			</p>
 		</article>
 		</div>
