Brew site push 5
This had better work.

--- a/sideproject/brewing.html
+++ b/sideproject/brewing.html
@@ -47,7 +47,7 @@
 					<figcaption><b>Glass beer bottles. <a href="http://pixabay.com/en/bottles-beer-drink-alcohol-203838/">Source.</a></b></figcaption>
 				</figure>
 				</div>
-			Code Brewers bottle on site and ship nationally.
+			Code Brewers bottle on site to make sure our beers </br> come to you as fresh as possible.
 			</p>
 		</article>
 		</div>
