--- a/sideproject/ingredients.html
+++ b/sideproject/ingredients.html
@@ -48,7 +48,7 @@
 					<figcaption><b>Hops buds. <a href="http://commons.wikimedia.org/wiki/File:Hopfen1.jpg">Source.</a></b></figcaption>
 				</figure>
 				</div>
-			Hops are added during the brewing process to give beer </br>its floral scent and bitter aftertaste.
+			Hops are added during the brewing process to give beer </br>its floral scent and bitter aftertaste. Our expert </br>selection of hops expertly enhance the flavor of our</br> beers.
 			</p>
 		</article>	
 		</div>
