--- a/brewing.html
+++ b/brewing.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Brewing Our Beer</title>
-	<link href="stylesheet/style.css" type="text/css" rel="stylesheet" />
+	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 <div id="content">	
